--- a/package.json
+++ b/package.json
@@ -8,16 +8,19 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@expo-google-fonts/courier-prime": "^0.1.0",
-    "@react-native-async-storage/async-storage": "^1.13.4",
+    "@expo-google-fonts/fira-sans": "^0.1.0",
+    "@react-native-async-storage/async-storage": "^1.13.2",
+    "@react-native-community/datetimepicker": "3.0.4",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/native": "^5.9.2",
-    "@react-navigation/stack": "^5.14.2",
+    "@react-navigation/native": "^5.8.10",
+    "@react-navigation/stack": "^5.12.8",
     "axios": "^0.21.1",
-    "expo": "~40.0.0",
+    "expo": "^40.0.1",
+    "expo-constants": "~9.3.3",
     "expo-firebase-recaptcha": "^1.3.0",
     "expo-font": "~8.4.0",
     "expo-status-bar": "~1.0.3",
+    "firebase": "7.9.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
@@ -25,9 +28,8 @@
     "react-native-gesture-handler": "~1.8.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
-    "react-native-screens": "~2.15.2",
+    "react-native-screens": "~2.15.0",
     "react-native-web": "~0.13.12",
-    "firebase": "7.9.0",
     "react-native-webview": "11.0.0"
   },
   "devDependencies": {
