--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/fira-sans": "^0.1.0",
+    "@expo-google-fonts/josefin-sans": "^0.1.0",
     "@react-native-async-storage/async-storage": "^1.13.2",
     "@react-native-community/datetimepicker": "3.0.4",
     "@react-native-community/masked-view": "0.1.10",
@@ -19,6 +20,7 @@
     "expo-constants": "~9.3.3",
     "expo-firebase-recaptcha": "^1.3.0",
     "expo-font": "~8.4.0",
+    "expo-location": "~10.0.0",
     "expo-status-bar": "~1.0.3",
     "firebase": "7.9.0",
     "react": "16.13.1",
@@ -30,8 +32,7 @@
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.0",
     "react-native-web": "~0.13.12",
-    "react-native-webview": "11.0.0",
-    "expo-location": "~10.0.0"
+    "react-native-webview": "11.0.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
