--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "react-native-webview": "11.0.0"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0"
+    "@babel/core": "~7.9.0",
+    "eslint": "^7.19.0",
+    "eslint-plugin-react": "^7.22.0"
   },
   "private": true
 }
